2011-06-22 Roman
- SYS: The function SYS.sleep() is added to user API. Repeated send signal SIGALRM is added in function taskDestroy().
- DAQ: Object type selection is added to templates.


2011-06-20 Roman
- SYS.XML, UI.VCAEngine: Special blocks is moved to special child tag whith name "<?nm".
- FIX:DAQ.BlockCalc: Global link status check is fixed.
- DAQ.ModBus: Tip help is added to links of "Template configuration" page.
- FIX:Archive.FSArch: Remove order to greater integer begin time for getVals() and used order to smaller.
    Value archive file truncation is fixed for often boolean warnings.


2011-06-17 Maxim
- FIX:UI.Vision: The drawing performance of the fills with the fill images is optimized for the primitive ElFigure by changing the "contains"
                 more quick mechanism especially for the complex objects.


2011-06-17 Roman
- UI.VCAEngine: The primitive "Document" is switched to full XML parse mode.
- UI.VCAEngine, UI.Vision: Keep aspect ratio option of master page is added.
- UI.VCAEngine: Nodes order of the primitive "Document" copy from dynamic procedure result is fixed.


2011-06-16 Roman
- DAQ: Redundancy configuration of any controller object is removed. Use special DAQ-redundancy configuration interface for it.


2011-06-15 Roman
- !!!!:DAQ, DAQ.DiamondBoards, DAQ.ModBus, DAQ.LogicLev:
    Parameter type changing support is added for disabled parameters of multitype DAQ modules.
    All multitype modules is adapted for that.
- SYS: Default locale for init-scripts is changed to en_US.UTF-8. Debian-package's postinst script is fixed.
- DAQ.BlockCalc: Set pass time after calls to "f_frq", by negative seconds, for cron schedule.
    Start and stop calc is added for enable/disable block of the run controller.
    Linked status is added for function and block's atributes links.
- DAQ.JavaLikeCalc: Set pass time after calls to "f_frq", by negative seconds, for cron schedule.