@@ -2,7 +2,7 @@
 
 EXTRA_DIST = *.h vision.qrc images/* po/*
 
-INCLUDES = -I$(top_srcdir)/src -I$(QT4_INCL) -I$(QT4_INCL)/QtCore -I$(QT4_INCL)/QtGui -D_REENTRANT -DQT_NO_DEBUG -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED
+INCLUDES = -I$(top_srcdir)/src $(QT4_INCL)
 
 oscd_modul_LTLIBRARIES = ui_Vision.la
 ui_Vision_la_LDFLAGS = -module -avoid-version -no-undefined
@@ -11,7 +11,7 @@ ui_Vision_la_SOURCES = tvision.cpp qrc_vision.cpp vis_widgs.cpp moc_vis_widgs.cp
     vis_run.cpp moc_vis_run.cpp vis_run_widgs.cpp moc_vis_run_widgs.cpp vis_shape_elfig.cpp moc_vis_shape_elfig.cpp
 ui_Vision_la_DIST = tvision.cpp vis_widgs.cpp vis_shapes.cpp vis_devel.cpp vis_devel_dlgs.cpp vis_devel_widgs.cpp \
     vis_run.cpp vis_run_widgs.cpp vis_shape_elfig.cpp vision.qrc
-ui_Vision_la_LIBADD = -L$(QT4_LIB) -lQtCore -lQtGui $(LIB_FFTW)
+ui_Vision_la_LIBADD = $(QT4_LIB)
 ui_Vision_la_LIBTOOLFLAGS = --tag=disable-static
 
 qrc_vision.cpp: vision.qrc
