@@ -1,3 +1,9 @@
+2011-06-23 Roman
+- SYS, UI.QTStarter, UI.QTCfg, UI.Vision: Use pkg-config for QT4 build configuration determine.
+- SYS.Function: Split resources of execute and manage connection to function.
+- DAQ.JavaLikeCalc: Calc functions limit is make more usable on long time subcalls.
+
+
 2011-06-22 Roman
 - SYS: The function SYS.sleep() is added to user API. Repeated send signal SIGALRM is added in function taskDestroy().
 - DAQ: Object type selection is added to templates.
